added categories and partner api
